fix: z-index was not high enough for tables

--- a/src/app/components/floating-toolbar/floating-toolbar.component.scss
+++ b/src/app/components/floating-toolbar/floating-toolbar.component.scss
@@ -16,7 +16,7 @@
   transform: translateX(-50%);
   background: white;
   border-radius: var(--mat-sys-corner-small);
-  z-index: 5;
+  z-index: 100;
 
   @include mat.elevation(8);
 }
